# fourier_radiator

./: .gitignore  AUTHORS.rst  CONTRIBUTING.rst  HISTORY.rst  LICENSE  Makefile  README.rst  pyproject.toml  requirements.txt  tox.ini
.github/: ISSUE_TEMPLATE.md
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
src/fourier_radiator/: __init__.py  compiler.py  config.py  core.py  data_manager.py  main.py  opencl_env.py  opencl_loader.py  particle.py  utils.py
tests/: __init__.py  all_in_one.ipynb  test.ipynb  test_None.py  unit.md
tests/betatron/: convert.ipynb  fbpic_lwfa_script.py
