[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "fourier_radiator"
version = "0.1.0"
description = "fourier calculation for classical electron radiation"
readme = "README.rst"
authors = [
  {name = "Jie Cai", email = "jiecai@stu.pku.edu.cn"}
]
maintainers = [
  {name = "Jie Cai", email = "jiecai@stu.pku.edu.cn"}
]
classifiers = [

]
license = {text = "GNU General Public License v3"}
dependencies = [
  
]

[project.optional-dependencies]
dev = [
    "coverage",  # testing
    "mypy",  # linting
    "pytest",  # testing
    "ruff"  # linting
]

[project.urls]

bugs = "https://github.com/zhazhajust/fourier_radiator/issues"
changelog = "https://github.com/zhazhajust/fourier_radiator/blob/master/changelog.md"
homepage = "https://github.com/zhazhajust/fourier_radiator"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
"*" = ["*.*"]




# Mypy
# ----

[tool.mypy]
files = "."

# Use strict defaults
strict = true
warn_unreachable = true
warn_no_return = true

[[tool.mypy.overrides]]
# Don't require test functions to include types
module = "tests.*"
allow_untyped_defs = true
disable_error_code = "attr-defined"

